--- a/app/src/main/res/layout/fragment_sensors.xml
+++ b/app/src/main/res/layout/fragment_sensors.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -21,15 +20,15 @@
 
         <TextView
             android:id="@+id/tv_sensors"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="1dp"
             android:layout_marginTop="1dp"
             android:layout_marginEnd="1dp"
             android:layout_marginBottom="1dp"
             android:hint="@string/qad"
-            android:textSize="5sp"
-            tools:ignore="SmallSp" />
+            android:textSize="24dp"
+            android:textAlignment="center" />
     </ScrollView>
 
     <Button
